[gd_scene load_steps=5 format=3 uid="uid://bntk0l4nt078i"]

[ext_resource type="Script" uid="uid://c4a2rwg443lfo" path="res://scripts/title.gd" id="1_c0dwi"]
[ext_resource type="AudioStream" uid="uid://mpbbi1f5nomg" path="res://Title Music.mp3" id="2_ax32a"]
[ext_resource type="Texture2D" uid="uid://bu8uq5uajv4hd" path="res://Zoom-Whack-a-Mole Loading Logo.png" id="3_e4n62"]
[ext_resource type="VideoStream" uid="uid://b6qt3eaqdognn" path="res://output_video.ogv" id="3_quvj1"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c0dwi")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_quvj1")
autoplay = true
expand = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -137.0
offset_right = 200.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_e4n62")
expand_mode = 5

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Play Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ax32a")
volume_db = 3.5
autoplay = true
parameters/looping = false

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
